--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/native": "^7.1.4",
     "@react-navigation/stack": "^7.2.8",
     "expo": "~52.0.43",
