--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@react-navigation/bottom-tabs": "^7.3.9",
-    "@react-navigation/native": "^7.1.4",
+    "@react-navigation/native": "^7.1.5",
+    "@react-navigation/native-stack": "^7.3.9",
     "@react-navigation/stack": "^7.2.8",
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
