--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@react-navigation/native-stack": "^7.3.9",
     "@react-navigation/stack": "^7.2.8",
     "@supabase/supabase-js": "^2.49.4",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "^53.0.0",
+    "expo-file-system": "~18.1.10",
+    "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.0",
     "react": "19.0.0",
@@ -28,9 +31,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "^0.20.0",
-    "expo-image-picker": "~16.1.4",
-    "expo-file-system": "~18.1.10"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0"
