--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@supabase/supabase-js": "^2.49.4",
     "base64-arraybuffer": "^1.0.2",
     "buffer": "^6.0.3",
-    "expo": "^53.0.0",
+    "expo": "^53.0.11",
     "expo-file-system": "~18.1.10",
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "^0.79.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-reanimated": "~3.17.4",
